@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-25T16:16:19Z",
-  "count_outdated" : 414,
-  "uniques_outdated" : 224,
-  "count" : 435,
+  "timestamp" : "2022-07-26T01:07:52Z",
+  "count_outdated" : 417,
+  "uniques_outdated" : 225,
+  "count" : 438,
   "uniques" : 236,
   "clones" : [
-    {
-      "timestamp": "2022-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
